Fix spacing

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   background-color: #333;
   overflow: hidden;
   position: fixed;
-  top: 80px;
+  top: 70px;
   width: 100%;
   font-family: 'Figtree', sans-serif;
   border-bottom: thick #ff6700;
@@ -53,7 +53,7 @@
 }
 
 .main {
-  margin-top: 100px;
+  margin-top: 150px;
 }
 
 .maintext {
